--- a/nihilnovi.glade
+++ b/nihilnovi.glade
@@ -285,6 +285,22 @@
                                         <property name="fill">True</property>
                                         <property name="position">1</property>
                                       </packing>
+                                    </child>                                    <child>
+                                      <object class="GtkRadioButton" id="rad_plotstyle_2D">
+                                        <property name="label" translatable="yes">2D</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">False</property>
+                                        <property name="xalign">0</property>
+                                        <property name="draw_indicator">True</property>
+                                        <property name="group">rad_plotstyle_lines</property>
+                                        <signal name="toggled" handler="on_plotcommand_toggled" swapped="no"/>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">2</property>
+                                      </packing>
                                     </child>
                                     <child>
                                       <object class="GtkRadioButton" id="rad_plotstyle_rc">
@@ -309,7 +325,7 @@
                                       <packing>
                                         <property name="expand">False</property>
                                         <property name="fill">True</property>
-                                        <property name="position">2</property>
+                                        <property name="position">3</property>
                                       </packing>
                                     </child>
                                   </object>
